Bug fix for scrollbar on the editpage and horizantal scrollbar for sidebar

--- a/fitnesse/resources/bootstrap-plus/less/dark/customize.less
+++ b/fitnesse/resources/bootstrap-plus/less/dark/customize.less
@@ -15,7 +15,11 @@ body {
   height: 100%;
   width: 100%;
   overflow-y: auto;
-  padding: 55px 0 100px;
+  padding: 55px 0 51px;
+}
+
+.contentWithoutFooter {
+  padding: 55px 0 0 !important;
 }
 
 article {
@@ -25,6 +29,10 @@ article {
 header,
 article {
   margin: 0 @page-margin-horizontal;
+}
+
+#articleWithSidebar {
+  margin: 0 25px;
 }
 
 footer {
@@ -1389,6 +1397,7 @@ kbd {
   height: 100%;
   padding: 10px 15px;
   overflow: auto;
+  white-space: nowrap;
 }
 
 #sidebarContent li {
@@ -1414,9 +1423,13 @@ kbd {
 #sidebarContent a.pruned {
   text-decoration: line-through;
 }
+
+/* Test History */
+
 #testHistoryDiv{
   display:inline-block;
 }
+
 #testHistoryDiv > a {
   float:right;
 }
